# RoVi

Ex1/: blackBox.cpp
Ex1/Box/: CMakeLists.txt  README.md
Ex1/Box/src/: blackBox.cpp
Mini_project_vision/: CMakeLists.txt
Mini_project_vision/src/: image1.cpp  image2.cpp  image3.cpp  image4_1.cpp  main.cpp  rovi1.pro  visionmethods.cpp  visionmethods.h
Robotics_Thor/Lab 2/UR5WorkCellCut/UR-6-85-5-A/: Device.wc.xml
Robotics_Thor/ex5_1/: CMakeLists.txt
Robotics_Thor/ex5_1/src/: ex5_1.cpp
Robotics_Thor/ex_4_3/: CMakeLists.txt
Robotics_Thor/ex_4_3/src/: ex_4_3.cpp
Robotics_Thor/ex_4_3/workcell/: lua_from_bb
Robotics_Thor/ex_4_4/: CMakeLists.txt
Robotics_Thor/ex_4_4/src/: ex_4_4.cpp
Robotics_Thor/man2/: CMakeLists.txt  robo2man.docx  robo2stat.fig  to_bottle_script.m
Robotics_Thor/man2/src/: pathplanning.cpp
ex4/: CMakeLists.txt
ex4/src/: main.cpp  visionmethods.cpp  visionmethods.h
final_project/: README.txt  euclideanDist.m  euclideanDist.m~  fast.m  medium.m  medium.m~  medium_track_1p.m  medium_track_1p.m~  slow.m
final_project/SamplePluginPA10/: CMakeCache.txt  CMakeLists.txt  JointLimitAndVelocities.txt  JointLimitAndVelocities3P.txt  Makefile  RoVi1PluginPA10.cbp  cmake_install.cmake  rwsettings.xml  ui_SamplePlugin.h
final_project/SamplePluginPA10/src/: SamplePlugin.cpp  SamplePlugin.hpp  SamplePlugin.ui  feature_methods.cpp  feature_methods.h  main.cpp  moc_SamplePlugin.cpp  moc_SamplePlugin.cpp_parameters
final_project/graphs/: fast_marker.fig  medium_toolPose_1dt_1point.fig
final_project/tmp/src/: SamplePlugin.cpp
(+234 files in other folders)
